# stack-code

./: README.md  USAGE.md  install.sh
docs/: BUILDOUT_STATUS_2026-04-26.md  N7_DRAFT_PR_CARD_FROZEN_EVIDENCE_TIMELINE_SCOPE.md  a2-l2b-run-plan-preview-operator-handoff.md  a2-l2c-operator-quickref.md  a2-l2c-scope-card.md  a2-l2d-operator-quickref.md  a2-l2d-readonly-inspection-scope-card.md  a2-l2d-status-schema.md  a2-l3-adapter-boundary-scope-card.md  a2-l3-harness-adapter-implementation-scope-card.md  a2-l3-harness-adapter-scope-card.md  a2-l3-harness-adapter-usage.md  a2-l3-ide-adapter-implementation-scope-card.md  a2-l3-ide-adapter-readiness-review.md  a2-l3-ide-adapter-scope-card.md  a2-l3-ide-adapter-usage.md  a2-l4-ide-extension-panel-scope.md  a2-l4-ide-extension-panel-v1-artifact-field-ux-polish-scope.md  a2-l4-ide-extension-panel-workspace-first-ux-scope.md  a2-l4-ide-harness-v0-ux-polish-scope.md  a2-l4-ide-harness-workflow-scope.md  a2-l4-local-model-coding-loop-scope-card.md  a2-l4-s2-readonly-local-model-task-planner-scope-card.md  a2-l4-s2a-planner-output-contract-scope-card.md  a2-l4-s2a-planner-output-operator-guide.md  a2-l4-s2a1-json-schema-file-scope-card.md  a2-l4-s2a4-schema-validator-scope-card.md  a2-l4-s2a6-planner-output-pretty-printer-scope-card.md  a2-l4-s2b-readonly-planner-cli-scope-card.md  a2-l4-s2b4-broker-routed-model-invocation-scope-card.md  a2-l4-s2b5-live-broker-smoke-scope-card.md  a2-l4-s2c-planner-output-to-a2-plan-transform-scope.md  a2-l4-s2c1b-planner-write-preview-scope.md  a2-l4-s2c1c-a-preview-assembly-runbook.md  a2-l4-s2c1d-preview-execution-scope.md  (+27 more)
rust/crates/a2-evidence-collector/: Cargo.toml
rust/crates/a2-evidence-collector/src/: lib.rs  main.rs
rust/crates/a2-harness-adapter/: Cargo.toml
rust/crates/a2-harness-adapter/src/: classifier.rs  config.rs  cycle.rs  envelope.rs  invoker.rs  lib.rs  report.rs  stop.rs
rust/crates/a2-harness-adapter/tests/: argv_audit.rs  config_refusal.rs  disposable_classifier.rs  expected_matrix.rs  idempotency.rs  network_sentinel.rs  no_write.rs  pr43_preservation.rs  schema_drift.rs
rust/crates/a2-harness-adapter/tests/common/: mod.rs
rust/crates/a2-harness-adapter/tests/fixtures/disposable_workspaces/no_marker/: README.md
rust/crates/a2-harness-adapter/tests/fixtures/disposable_workspaces/ok/: README.md
rust/crates/a2-harness-adapter/tests/fixtures/disposable_workspaces/ok/.claw/: harness-disposable.marker
rust/crates/a2-plan-runner/: Cargo.toml
rust/crates/a2-plan-runner/src/: approval.rs  approval_ux.rs  checkpoint.rs  diff_preview.rs  lib.rs  markers.rs  preflight.rs  report.rs  runner.rs  status.rs  write_executor.rs  write_payload.rs  write_preview.rs  write_runtime.rs
rust/crates/a2-plan-runner/tests/: l2b_approval_ux.rs  l2b_checkpoint_store.rs  l2b_diff_approval.rs  l2b_path_safety.rs  l2b_run_plan_write_preview.rs  l2b_write_executor.rs  l2b_write_payload.rs  l2d_status.rs
rust/crates/a2-plan-schema/: Cargo.toml
rust/crates/a2-plan-schema/src/: lib.rs  plan_schema.rs  plan_validate.rs
rust/crates/a2-plan-schema/tests/: l2a_workspace_write.rs
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/rusty-claude-cli/src/: main.rs
rust/crates/rusty-claude-cli/tests/: mock_parity_harness.rs  plan_apply.rs  plan_apply_bundle.rs  plan_approve.rs  plan_preview_bundle.rs  plan_run.rs  plan_run_write_preview.rs  plan_status.rs  resume_slash_commands.rs
(+254 files in other folders)
