[package]
name = "a2-evidence-collector"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "a2-evidence-collector"
path = "src/main.rs"

[lib]
name = "a2_evidence_collector"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"

[lints]
workspace = true
