[package]
name = "a2-harness-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "a2_harness_adapter"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
