[package]
name = "a2-plan-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "a2_plan_runner"
path = "src/lib.rs"

[dependencies]
a2-plan-schema = { path = "../a2-plan-schema" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10"
similar = { version = "3", default-features = false, features = ["text", "inline"] }
ulid = { version = "1", features = ["serde"] }

[lints]
workspace = true
