[package]
name = "a2-plan-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "a2_plan_schema"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
